# num2en

./: Cargo.toml  LICENSE  README.md  crates.io_README.md
src/: lib.rs  tests.rs
testdata/: -1000_gt_nums_lt_0.csv  0_ge_nums_lt_1000.csv  f32_nums_err_too-large.csv  f32_nums_ok.csv  f64_nums_err_not-finite.csv  f64_nums_err_too-large.csv  f64_nums_ok.csv  i128_nums.csv  i16_nums.csv  i32_nums.csv  i64_nums.csv  i8_nums.csv  spell_digits_err.csv  spell_digits_ok.csv  str_nums_err_invalid.csv  str_nums_err_too-large.csv  str_nums_ok.csv  u128_nums.csv  u128_ord_nums.csv  u16_nums.csv  u16_ord_nums.csv  u32_nums.csv  u32_ord_nums.csv  u64_nums.csv  u64_ord_nums.csv  u8_nums.csv  u8_ord_nums.csv
